# MemMCP

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  final_specification.md  impact_map.md  ledger.md  next_actions.md  profile_memory.py  project_ledger.md  pyproject.toml  repro.py  swarm_meta_debriefing.md  swarm_plan.md  task_dag.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: __init__.py  database.py  pruner.py  retrieval.py  server.py
tests/: e2e_test.py  test_memmcp.py
